# ggps-py

./: CLAUDE.md  LICENSE  README.md  backup.xml  build.sh  code-reformat.ps1  code-reformat.sh  dev-notes.md  pip_list.txt  pyproject.toml  requirements.in  requirements.txt  sample-program.py  tests.ps1  tests.sh
data/: activity_10101108916.tcx  activity_17075053124_lorimer_avinger.gpx  activity_17075053124_lorimer_avinger.gpx.gpx.json  activity_17075053124_lorimer_avinger.gpx.path.json  activity_17075053124_lorimer_avinger.tcx  activity_17075053124_lorimer_avinger.tcx.path.json  activity_17075053124_lorimer_avinger.tcx.tcx.json  activity_17191864852-slow-10k.gpx  activity_17191864852-slow-10k.tcx  twin_cities_marathon.gpx.gpx.json  twin_cities_marathon.gpx.path.json  twin_cities_marathon.tcx.path.json  twin_cities_marathon.tcx.tcx.json
ggps/: __init__.py  base_handler.py  counter.py  gpx_handler.py  path_handler.py  tcx_handler.py  trackpoint.py
tests/: test_gpx_handler.py  test_gpx_handler_2024.py  test_library_info.py  test_path_handler.py  test_path_handler_2024.py  test_tcx_handler.py  test_tcx_handler_2024.py  test_trackpoint.py
tests/helpers/: unit_test_helper.py
