[project]
name = "ggps"
version = "0.6.0"
dependencies = [
  "black",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "twine==5.1.1",
  "m26>=0.3.2"
]
requires-python = ">=3.12"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "ggps - gps file parsing utilities for garmin connect and garmin devices"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "python",
  "garmin",
  "gps",
  "utilities",
  "m26"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/ggps-py"

[tool.setuptools.packages.find]
include = ['m26']
exclude = ['tmp', 'data', 'htmlcov']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722"]
