[project]
name = "ggps"
version = "1.0.0"

dependencies = [
  "m26>=0.3.2",
  "pylint>=4.0.4",
  "pytest-cov>=6.1.1",
  "pytest-randomly>=4.0.0",
  "pytest>=8.3.5",
]

requires-python = ">=3.13"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "gps file parsing utilities for garmin connect and garmin devices"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["garmin connect", "GPS", "TCX", "TPX", "KML", "XML", "parsing"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/ggps-py"

[tool.ruff]
line-length = 100

[tool.pylint]
max-line-length = 120          # Set maximum line length
output-format = "colorized"    # Set output format
